r2e-compile-tests/compile-fail/guard_path_symbol_unknown.stderr
error[E0425]: cannot find value `missing` in module `path`
  --> compile-fail/guard_path_symbol_unknown.rs:46:40
   |
46 |     #[guard(ProjectGuard::viewer(path::missing))]
   |                                        ^^^^^^^ not found in `path`
